# solpin

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
rust-program/: Cargo.toml
rust-program/src/: lib.rs  processor.rs
src/dapplib/: .gitignore  README.md  package-lock.json  package.json
src/dapplib/programs/: Cargo.toml
src/dapplib/programs/src/: entrypoint.rs  lib.rs  processor.rs  state.rs
src/dapplib/src/: blockchain.js  constants.js  dapp-config.json  dapp-lib.js  solana.js
src/dapplib/src/scripts/: deploy.js  layouts.js
src/lib/: Solpin.svelte
src/lib/Solpin/: Solpin.svelte  Solpin.svx  checkBalance.svelte  index.svelte
src/lib/header/: Header.svelte
src/lib/layouts/: article.svelte
src/routes/: __layout.svelte  about.svelte  index.svelte
src/routes/app/: index.svelte
